sass/partials/_document.scss
$heading-size: 20px;

.lineHeight {
  line-height: 20px;
}

body {
  color: black;
}

.pane {
  border-radius: $radius;
  background-color: white;
}

.pane ~ .pane {
  margin-bottom: 0;
}

.center {
  margin-top: $spacing;
  padding: $spacing;
  background-color: transparentize($grayest, 0.9);
  border-radius: $radius;
}

h2 {
  font-size: $heading-size;
  opacity: 1;
}

h2.subtitle {
  margin-top: $spacing / 4;
  margin-bottom: $spacing;
  line-height: $heading-size * 1.75;
  color: $grayest;
  text-align: center;
  > span {
    display: inline-block;
  }
  > span:not(:first-child) {
    margin-left: $spacing * 1.25;
  }
  span.fa {
    margin-right: $spacing / 3;
  }
}

.highlight {
  @extend .fg-turquoise;
  font-weight: bold;
}

.optional {
  display: none;
}

.pane > div > h1 {
  font-size: 44px;
  color: black;
  text-align: center;
  text-transform: none;
  letter-spacing: -1.5px;
  padding-top: 0;
}

section {
  margin-bottom: $spacing;
  header {
    border-radius: $radius;
    h2 {
      padding: ($spacing / 2) 0 ($spacing / 4) 0;
      font-size: 24px;
      border-bottom: 2px solid $grayest;
      color: $grayest;
    }
  }
  > div {
    width: 100%;
    padding-top: ($spacing / 1.5);
    h2 {
      margin-bottom: ($spacing / 3);
      margin-left: 20%;
      padding-top: $spacing / 1.5;
      padding-bottom: $spacing / 3;
      color: $grayer;
    }
    h2:not(:first-child) {
      margin-top: ($spacing / 4);
    }
    > div {
      margin-top: $spacing / 4;
      > aside {
        > span {
          font-family: $font-heading;
          font-size: 100%;
          color: $grayest;
          text-transform: uppercase;
          @extend .lineHeight;
          display: block;
        }
        // span.stars, span.stars span {
        //   display: inline !important;
        // }
        span.look-at-me {
          color: black;
        }
      }
      > div {
        padding-top: $spacing / 4;
        ul {
          li {
            text-align: justify;
          }
        }
        ul:not(.icons) {
          li {
            margin-left: 30px;
            line-height: 110%;
          }
        }
        ul.icons {
          margin-left: 0;
          list-style-type: none;
          li {
            line-height: 100%;
            > * {
              @extend .lineHeight;
              display: inline-block;
              span:last-child {
                margin-right: $spacing / 1.5;
              }
            }
            span.fa {
              margin-right: $spacing / 4;
              font-size: 130%;
              color: $turquoise;
            }
            span:not(.fa) {
              vertical-align: 2px;
            }
          }
        }
      }
    }
    > div:not(.optional):not(:last-child) {
      margin-bottom: $spacing / 2;
    }
  }
  div:after {
    @extend .clear-fix;
  }
}

section.unheadered {
}

section:not(.unheadered) {
  > div {
  }
}

section:last-child {
  margin-bottom: 0;
}

p.prose {
  margin-top: $spacing;
  margin-bottom: $spacing * 1.75;
}

hr {
  border: 0;
  margin-top: ($spacing / 1.5);
  margin-bottom: ($spacing / 1.5);
  border-top: 2px solid $grayer;
  opacity: 0.5;
}

@media (min-width: $r-width-1) {

  body {
    padding: $spacing;
  }

  p.prose {
    margin-left: 9.5%;
    margin-right: 9.5%;
  }

  section {
    div {
      > div {
        aside {
          float: left;
          width: 20%;
          padding-right: $spacing;
          text-align: right;
        }
        > div {
          padding-right: 10%;
          float: left;
          width: 80%;
          padding-top: 0;
        }
      }
    }
  }

  .center {
    width: auto;
    margin-left: 12%;
    margin-right: 12%;
    > div {
      margin-top: 0;
      > aside {
      width: 30%;
      }
      > div {
        width: 70%;
        > div {
          padding-right: 0;
        }
      }
    }
  }

}

@media (min-width: $r-width-2) {

}

.bar {
  padding: ($spacing / 4) ($spacing / 2) ($spacing / 4) ($spacing / 2);
  p {
    color: $fg;
    text-align: center;
    letter-spacing: 0.5px;
    line-height: $spacing * 1.5;
    > * {
      display: inline-block;
      opacity: 0.5;
      text-transform: uppercase;
      span.fa {
        margin-right: $spacing / 3;
      }
    }
    > *:not(:first-child) {
      margin-left: $spacing * 1.5;
    }
  }
}

